[FIX] point_of_sale: close popup buttons hidden on mobile
Steps to follow:

  - Use a mobile view in the browser dev tools
  - Open the POS app
  - Perform a Sale
  - Close the session

opw-2788751

X-original-commit: 654cdb5b8a46c9b44d432f05bcaf29d20fe3e306

--- a/addons/point_of_sale/static/src/css/popups/closing_pos_popup.css
+++ b/addons/point_of_sale/static/src/css/popups/closing_pos_popup.css
@@ -127,6 +127,28 @@
     font-style: italic;
 }
 
+@media screen and (max-width: 768px) {
+    .pos .close-pos-popup {
+        overflow-y: auto;
+    }
+
+    .pos .close-pos-popup .footer {
+        display: flex;
+        flex-direction: column;
+        height: unset;
+    }
+
+    .pos .close-pos-popup .footer .button {
+        width: 90% !important;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .pos .close-pos-popup .footer .button:last-of-type {
+        margin-bottom: 10px;
+    }
+}
+
 .pos .close-pos-popup .footer .button {
     width: 150px;
 }
